prepare to release

--- a/ansible/playbook/site.yml
+++ b/ansible/playbook/site.yml
@@ -1,27 +1,29 @@
 ---
 - name: Install Clickhouse
   hosts: clickhouse
-  
+
   handlers:
     - name: Start clickhouse service
       become: true
       ansible.builtin.service:
         name: clickhouse-server
         state: restarted
-  
+
   tasks:
     - block:
         - name: Get clickhouse distrib
           ansible.builtin.get_url:
             url: "https://packages.clickhouse.com/rpm/stable/{{ item }}-{{ clickhouse_version }}.noarch.rpm"
             dest: "./{{ item }}-{{ clickhouse_version }}.rpm"
+            mode: "0640"
           with_items: "{{ clickhouse_packages }}"
       rescue:
         - name: Get clickhouse distrib
           ansible.builtin.get_url:
             url: "https://packages.clickhouse.com/rpm/stable/clickhouse-common-static-{{ clickhouse_version }}.x86_64.rpm"
             dest: "./clickhouse-common-static-{{ clickhouse_version }}.rpm"
-    
+            mode: "0640"
+
     - name: Install clickhouse packages
       become: true
       ansible.builtin.yum:
@@ -30,7 +32,7 @@
           - clickhouse-client-{{ clickhouse_version }}.rpm
           - clickhouse-server-{{ clickhouse_version }}.rpm
       notify: Start clickhouse service
-    
+
     - name: Flush handlers
       ansible.builtin.meta: flush_handlers
 
@@ -42,19 +44,20 @@
 
 - name: Install Vector
   hosts: vector
-  
+
   handlers:
     - name: Start vector service
       become: true
       ansible.builtin.service:
         name: vector
         state: restarted
-  
+
   tasks:
     - name: Get vector distrib
       ansible.builtin.get_url:
         url: "https://packages.timber.io/vector/{{ vector_version }}/vector-{{ vector_version }}-1.x86_64.rpm"
         dest: "./vector-{{ vector_version }}-1.x86_64.rpm"
+        mode: "0640"
 
     - name: Install vector packages
       become: true
@@ -62,7 +65,6 @@
         name:
           - vector-{{ vector_version }}-1.x86_64.rpm
       notify: Start vector service
-    
+
     - name: Flush handlers
       ansible.builtin.meta: flush_handlers
-
