--- a/ansible/playbook/site.yml
+++ b/ansible/playbook/site.yml
@@ -3,7 +3,7 @@
   hosts: clickhouse
 
   handlers:
-    - name: Start clickhouse service
+    - name: Clickhouse | Start clickhouse service
       become: true
       ansible.builtin.service:
         name: clickhouse-server
@@ -11,32 +11,36 @@
 
   tasks:
     - block:
-        - name: Get clickhouse distrib
+        - name: Clickhouse | Get clickhouse distrib
           ansible.builtin.get_url:
             url: "https://packages.clickhouse.com/rpm/stable/{{ item }}-{{ clickhouse_version }}.noarch.rpm"
             dest: "./{{ item }}-{{ clickhouse_version }}.rpm"
-            mode: "0640"
+            mode: "0644"
           with_items: "{{ clickhouse_packages }}"
       rescue:
-        - name: Get clickhouse distrib
+        - name: Clickhouse | Get clickhouse distrib
           ansible.builtin.get_url:
             url: "https://packages.clickhouse.com/rpm/stable/clickhouse-common-static-{{ clickhouse_version }}.x86_64.rpm"
             dest: "./clickhouse-common-static-{{ clickhouse_version }}.rpm"
-            mode: "0640"
+            mode: "0644"
 
-    - name: Install clickhouse packages
+    - name: Clickhouse | Install clickhouse packages
       become: true
       ansible.builtin.yum:
         name:
           - clickhouse-common-static-{{ clickhouse_version }}.rpm
           - clickhouse-client-{{ clickhouse_version }}.rpm
           - clickhouse-server-{{ clickhouse_version }}.rpm
-      notify: Start clickhouse service
+      notify: Clickhouse | Start clickhouse service
 
-    - name: Flush handlers
+    - name: Clickhouse | Flush handlers
       ansible.builtin.meta: flush_handlers
 
-    - name: Create database
+    - name: Clickhouse | Starting clickhouse
+      ansible.builtin.pause:
+        seconds: 5
+
+    - name: Clickhouse | Create database
       ansible.builtin.command: "clickhouse-client -q 'create database logs;'"
       register: create_db
       failed_when: create_db.rc != 0 and create_db.rc !=82
@@ -46,25 +50,41 @@
   hosts: vector
 
   handlers:
-    - name: Start vector service
+    - name: Vector | Start vector service
       become: true
       ansible.builtin.service:
         name: vector
         state: restarted
+        daemon_reload: true
 
   tasks:
-    - name: Get vector distrib
+    - name: Vector | Get vector distrib
       ansible.builtin.get_url:
-        url: "https://packages.timber.io/vector/{{ vector_version }}/vector-{{ vector_version }}-1.x86_64.rpm"
+        url: "{{ vector_url }}"
         dest: "./vector-{{ vector_version }}-1.x86_64.rpm"
-        mode: "0640"
+        mode: "0644"
 
-    - name: Install vector packages
+    - name: Vector | Vector config
+      ansible.builtin.template:
+        src: vector.yml.j2
+        dest: vector.yml
+        mode: "0644"
+        owner: "{{ ansible_user_uid }}"
+        group: "{{ ansible_user_gid }}"
+        validate: vector validate --no-environment --yaml-config %s
+
+    - name: Vector | Create systemd unit
+      become: true
+      ansible.builtin.template:
+        src: vector.service.j2
+        dest: /etc/systemd/system/vector.service
+        mode: "0644"
+        owner: "{{ ansible_user_uid }}"
+        group: "{{ ansible_user_gid }}"
+
+    - name: Vector | Install vector packages
       become: true
       ansible.builtin.yum:
         name:
           - vector-{{ vector_version }}-1.x86_64.rpm
       notify: Start vector service
-
-    - name: Flush handlers
-      ansible.builtin.meta: flush_handlers
