--- a/ansible/playbook/group_vars/vector.yml
+++ b/ansible/playbook/group_vars/vector.yml
@@ -3,18 +3,19 @@ vector_version: 0.21.2
 vector_url: https://packages.timber.io/vector/{{ vector_version }}/vector-{{ vector_version }}-1.x86_64.rpm
 vector_config:
   sources:
-    my_source_id:
-      type: internal_logs
+    my_logs:
+      type: demo_logs
+      format: shuffle
+      lines:
+        - Line 1
   sinks:
-    my_sink_id:
+    to_clickhouse:
       type: clickhouse
       inputs:
-        - my-source-or-transform-id
+        - my_logs
       database: mydatabase
-      endpoint: http://hostvars[vector-01]['ansible_default_ipv4']['address']:8123
+      endpoint: http://{{ clickhouse_01_ext_ip }}:8123
       table: mytable
-      acknowledgements: false
       compression: gzip
-      encoding: false
-      healthcheck: true
+      healthcheck: false
       skip_unknown_fields: true
