--- a/ansible/playbook/site.yml
+++ b/ansible/playbook/site.yml
@@ -33,6 +33,14 @@
           - clickhouse-server-{{ clickhouse_version }}.rpm
       notify: Clickhouse | Start clickhouse service
 
+    - name: Clickhouse | Config change (allow from everywhere)
+      become: true
+      lineinfile: dest=/etc/clickhouse-server/config.xml
+                  regexp='^(.*)<listen_host>0.0.0.0</listen_host>(.*)$'
+                  line='    <listen_host>0.0.0.0</listen_host>'
+                  state=present
+      notify: Clickhouse | Start clickhouse service
+
     - name: Clickhouse | Flush handlers
       ansible.builtin.meta: flush_handlers
 
@@ -41,7 +49,7 @@
         seconds: 5
 
     - name: Clickhouse | Create database
-      ansible.builtin.command: "clickhouse-client -q 'create database logs;'"
+      ansible.builtin.command: "clickhouse-client -q 'create database logs;' -h 127.0.0.1"
       register: create_db
       failed_when: create_db.rc != 0 and create_db.rc !=82
       changed_when: create_db.rc == 0
@@ -69,9 +77,9 @@
         src: vector.yml.j2
         dest: vector.yml
         mode: "0644"
-        owner: "{{ ansible_user_uid }}"
+        owner: "{{ ansible_user_id }}"
         group: "{{ ansible_user_gid }}"
-        validate: vector validate --no-environment --yaml-config %s
+        # validate: vector validate --no-environment --config-yaml %s
 
     - name: Vector | Create systemd unit
       become: true
@@ -87,4 +95,4 @@
       ansible.builtin.yum:
         name:
           - vector-{{ vector_version }}-1.x86_64.rpm
-      notify: Start vector service
+      notify: Vector | Start vector service
